[package]
name = "admin_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27" # The GUI framework (egui)
tokio = { version = "1", features = ["full"] } # Async runtime
reqwest = { version = "0.11", features = ["json"] } # HTTP Client
serde = { version = "1", features = ["derive"] } # Serialization
serde_json = "1"
dotenv = "0.15"
rand = "0.8"