[package]
name = "tokenir_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0" }
openssl = { version = "0.10.73", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
egui = "0.33.0"
eframe = "0.33.0"
solana-sdk = "2.3.1"
solana-connection-cache = "2.3.1"
solana-client = "2.3.7"
open = "5.0.0"
dotenv = "0.15"
serde_json = "1.0.142"
human_format = "1.1.0"
borsh = "1.5.7"
spl-associated-token-account = "7.0.0"
mpl-token-metadata = "5.1.1"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["cookies", "json"] }
bincode = "1"
solana-quic-client = "3.1.5"
